--- a/lambda/kms-encrypt/pom.xml
+++ b/lambda/kms-encrypt/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.example.encrypt</groupId>
-  <artifactId>lambda-kms-encrypt</artifactId>
+  <artifactId>kms-encrypt</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>lambda-kms-encrypt</name>
+  <name>kms-encrypt</name>
   <url>http://maven.apache.org</url>
 
   <dependencyManagement>
